--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.111.2",
+    "@react-three/fiber": "^8.17.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "fs": "^0.0.1-security",
+    "global": "^4.4.0",
+    "gltf-pipeline": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "three": "^0.167.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.94.0"
   },
   "scripts": {
     "start": "react-scripts start",
