--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "dependencies": {
     "@react-three/drei": "^9.111.2",
     "@react-three/fiber": "^8.17.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "fs-react": "^0.0.4",
     "global": "^4.4.0",
     "gltf-pipeline": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "three": "^0.167.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0"
@@ -42,5 +51,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
+
+  
 }
+
+
