--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "fs-react": "^0.0.4",
     "global": "^4.4.0",
     "gltf-pipeline": "^4.1.0",
+    "node-cache": "^5.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
@@ -30,6 +32,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "cd backend && node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -60,8 +63,4 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
-
-  
 }
-
-
