--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "fs-react": "^0.0.4",
     "global": "^4.4.0",
     "gltf-pipeline": "^4.1.0",
+    "json-server": "^0.17.2",
+    "json-server-auth": "^2.1.0",
     "node-cache": "^5.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,7 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "cd backend && node server.js",
+    "server": "json-server-auth --watch db.json --port 8080",
+    "dev": "concurrently \"npm start\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
